<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".QuizActivity">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:hint="aaaa"
              android:id="@+id/score"
              android:textSize="18dp"
              android:layout_marginBottom="20dp"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:hint="aaaa"
              android:layout_alignParentRight="true"
              android:id="@+id/score1"
              android:textSize="18dp"
              android:layout_marginBottom="20dp"
    />
    <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="40dp"
            android:textSize="19dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:scrollbars="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/intrebare_text"
            android:layout_above="@+id/btnR1"
    />
    <Button
            android:id="@+id/btnR1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="11dp"
            android:text="@string/raspuns1"
            android:background="@drawable/border"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true"
            android:layout_above="@+id/btnR2"
    />
    <Button
            android:id="@+id/btnR2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_marginRight="30dp"
            android:text="@string/raspuns2"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/btnR3"
    />
    <Button
            android:id="@+id/btnR3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_marginRight="30dp"
            android:text="@string/raspuns3"
            android:background="@drawable/border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_above="@+id/btnR4"
    />
    <Button
            android:id="@+id/btnR4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textSize="11dp"
            android:layout_marginRight="30dp"
            android:text="@string/raspuns4"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
    />
</RelativeLayout>